--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ bytecheck = { default-features= false, optional = true, version = "0.6" }
 byteorder = { default-features = false, optional = true, version = "1.0" }
 bytes = { default-features = false, optional = true, version = "1.0" }
 diesel1 = { default-features = false, optional = true, package = "diesel", version = "1.0" }
-diesel2 = { default-features = false, optional = true, package = "diesel", version = "2.0" }
+diesel2 = { default-features = false, optional = true, package = "diesel", git = "https://github.com/Guara92/diesel.git", branch = "backport/3412" }
 num-traits = { default-features = false, features = ["i128"], version = "0.2" }
 postgres = { default-features = false, optional = true, version = "0.19" }
 rand = { default-features = false, optional = true, version = "0.8" }
